--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-   "name": "cljs-template",
+   "name": "mapkon-blog",
    "version": "1.0.0",
-   "description": "TODO: Add description",
+   "description": "Documenting the thoughts of an itinerant software engineer",
    "scripts": {
-      "init": "yarn install && yarn run build",
-      "start": "shadow-cljs watch cljs-template",
+      "setup": "yarn install && yarn run build",
+      "start": "shadow-cljs watch mapkon-blog",
       "watch:css": "onchange 'tw/*css' -- yarn run tw",
-      "build": "yarn run tw && shadow-cljs compile cljs-template",
-      "tw": "npx tailwind build tw/style.css -o public/css/main.css"
+      "build": "yarn run tw && shadow-cljs compile app",
+      "tw": "npx tailwind build tw/style.css -o docs/css/main.css"
    },
    "repository": {
       "type": "git",
-      "url": "git+https://github.com/mapkon/cljs-template.git"
+      "url": "git+https://github.com/mapkon/mapkon.github.io.git"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "bugs": {
-      "url": "https://github.com/mapkon/cljs-template/issues"
+      "url": "https://github.com/mapkon/mapkon.github.io/issues"
    },
-   "homepage": "https://github.com/mapkon/cljs-template#readme",
+   "homepage": "https://github.com/mapkon/mapkon.github.io#readme",
    "dependencies": {
       "create-react-class": "^15.7.0",
-      "react": "^18.0.0",
-      "react-dom": "^18.0.0",
+      "react": "^16.13.0",
+      "react-dom": "^16.13.0",
       "shadow-cljs": "^2.17.8",
       "tailwindcss": "^3.0.23",
       "onchange": "^7.1.0"
